# SehatAI

./: .gitignore  LICENSE  README.md  render.yaml
docs/: BUILD_PLAN.md  DECK.md  DECK_CONTENT.md  ELIGIBILITY.md  GOVERNANCE.md  OVERVIEW_PLAIN.md  SUBMISSION_SPEC.md  VIDEO_SCRIPT.md
engine/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
engine/artifacts/: challenger.txt  champion.json  model_card.json  segmentation_report.json  validation_report.json  weight_fit.json
engine/personas/: 1_strong_formal.json  2_thin_file_hero.json  3_volatile_borderline.json  4_genuine_decline.json  5_thin_delinquent.json  6_partial_fraud.json  7_proxy_manufacturer.json  8_proxy_slowdown.json
engine/scripts/: export_snapshots.py  fit_and_validate.py  generate_cohort.py  generate_personas.py  pregenerate_model_explain.py  pregenerate_narration.py  segment_cohort.py  train_models.py
engine/sehat/: __init__.py  api.py  audit.py  challenger.py  champion.py  config.py  decision.py  engine.py  explain.py  features.py  model_features.py  pipeline.py  prompts.py  reason_codes.py  schema.py  scoring.py  sources.py  synth.py  validation.py  woe.py
engine/tests/: test_models.py  test_monotonicity.py
web/: .env.example  .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vercel.json
web/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
web/components/: BadRateChart.tsx  CoverageMeter.tsx  GateStrip.tsx  Gauge.tsx  HealthCard.tsx  ModelCardPanel.tsx  ModelCrossCheck.tsx  OperationalProxyPanel.tsx  PersonaSwitcher.tsx  SiteChrome.tsx  (+4 more)
(+17 files in other folders)
